--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/material-nextjs": "^5.16.6",
     "axios": "^1.7.3",
     "next": "14.2.5",
+    "quill": "^2.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
