--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fontsource/roboto": "^5.0.14",
     "@mui/material": "^5.16.7",
     "@mui/material-nextjs": "^5.16.6",
-    "axios": "^1.7.3",
+    "axios": "^1.7.4",
+    "lodash": "^4.17.21",
     "next": "14.2.5",
     "quill": "^2.0.2",
     "react": "^18",
