--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-quill": "^2.0.0"
   },
   "devDependencies": {
