--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-quill": "^2.0.0"
   },
   "devDependencies": {
