--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.4",
     "lodash": "^4.17.21",
     "next": "14.2.5",
+    "papaparse": "^5.4.1",
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
