--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material-nextjs": "^5.16.6",
     "@react-spring/web": "^9.7.5",
     "axios": "^1.7.4",
+    "framer-motion": "^11.11.17",
     "lodash": "^4.17.21",
     "next": "14.2.5",
     "papaparse": "^5.4.1",
