--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-gauge-chart": "^0.5.1",
     "react-hot-toast": "^2.4.1",
     "react-material-ui-carousel": "^3.4.2",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
