--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.4",
     "framer-motion": "^11.11.17",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.460.0",
     "next": "14.2.5",
     "papaparse": "^5.4.1",
     "quill": "^2.0.2",
